--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  dartz:
+  freezed_annotation:
+  get_it: ^7.6.0
+  dio: ^5.3.2
+  http: ^0.13.5
+  connectivity_plus: ^0.0.1
+  data_connection_checker_tv: ^0.3.5-nullsafety
+
 
 dev_dependencies:
   flutter_test:
@@ -45,6 +54,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+ 
+  build_runner: ^2.1.7
+  change_app_package_name: ^1.0.0
+  flutter_launcher_icons: ^0.9.2
+  json_serializable: ^6.1.4
+  mobx_codegen: ^2.0.7
+  moor_generator: null
+  freezed:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
